<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchFragmentRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="217dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/searchInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/grid_2"
                android:hint="@string/search_input_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingBottom="@dimen/grid_2"
                android:selectAllOnFocus="true"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/episodeMinimumInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/grid_2"
                android:hint="@string/search_min_episodes_hint"
                android:inputType="number"
                app:layout_constraintEnd_toStartOf="@id/episodeDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchInput" />

            <TextView
                android:id="@+id/episodeDivider"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/grid_1"
                android:text="@string/search_episode_divider"
                app:layout_constraintBaseline_toBaselineOf="@+id/episodeMinimumInput"
                app:layout_constraintEnd_toStartOf="@id/episodeMaximumInput"
                app:layout_constraintStart_toEndOf="@id/episodeMinimumInput" />

            <EditText
                android:id="@+id/episodeMaximumInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/grid_2"
                android:hint="@string/search_max_episodes_hint"
                android:inputType="number"
                app:layout_constraintBaseline_toBaselineOf="@id/episodeMinimumInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/episodeDivider" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/episodeCountBottomBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="episodeDivider,episodeMinimumInput,episodeMaximumInput" />

            <AutoCompleteTextView
                android:id="@+id/languageInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/grid_2"
                android:hint="@string/search_language_hint"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toStartOf="@id/regionInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/episodeCountBottomBarrier" />

            <AutoCompleteTextView
                android:id="@+id/regionInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/grid_2"
                android:hint="@string/search_region_hint"
                android:selectAllOnFocus="true"
                app:layout_constraintBaseline_toBaselineOf="@id/languageInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/languageInput" />

            <RadioGroup
                android:id="@+id/sortByRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/grid_5"
                android:layout_marginTop="@dimen/grid_1"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/languageInput">

                <RadioButton
                    android:id="@+id/dateButton"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn_segmented_left"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    tools:text="@string/search_sort_by_date" />

                <RadioButton
                    android:id="@+id/relevanceButton"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_btn_segmented_right"
                    android:button="@android:color/transparent"
                    android:gravity="center"
                    tools:text="@string/search_sort_by_relevance" />
            </RadioGroup>

            <Button
                android:id="@+id/searchButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/grid_2"
                android:layout_marginTop="@dimen/grid_0_5"
                android:layout_marginBottom="@dimen/grid_2"
                android:enabled="false"
                android:text="@string/search_button_search"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/sortByRadioGroup" />

            <View
                android:id="@+id/searchDivider"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginHorizontal="@dimen/grid_1"
                android:layout_marginBottom="@dimen/grid_2"
                android:background="#969696"
                app:layout_constraintTop_toBottomOf="@id/searchButton" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchPodcastsList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/searchDivider"
                tools:listitem="@layout/item_podcast" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/searchProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
